# PROOF

./: .replit  app.py  pyproject.toml  replit.md  serve_api.py
attached_assets/: Pasted-This-is-a-billion-person-scale-idea-Let-me-think-at-UPI_1777015238218.txt
data/: proof.sqlite  proof.sqlite-shm  proof.sqlite-wal  proof_id.key
proof_protocol/: __init__.py  abuse_guard.py  behavioral_dna.py  crypto_primitives.py  database.py  pedersen.py  proof_of_work.py  protocol.py  public_api.py  replay_protection.py  risk_engine.py  schnorr_zkp.py  secure_enclave.py  self_test.py  sites.py  telemetry.py  trust_tiers.py  validator_network.py  widget_js.py
