[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.7",
    "ecdsa>=0.19.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pynacl>=1.6.2",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
]
